<resources>
    <string name="app_name">Team Tree</string>
    <string name="description_image_1">this is cardEntity back image</string>
    <string name="message_for_left_drawer">To be continue</string>
    <string name="order_card_fab_content_description">Draggable content for add cardEntity</string>
    <string name="empty_container_text">카드를 추가해주세요.</string>
    <string name="addNewCardUtil_fab_text">NEW</string>
    <string name="search_result_contact_number_tv_hint">전화번호 없음</string>
    <string name="btn_save_name">저장</string>
    <string name="btn_cancel_name">취소</string>
    <string name="btn_call_text">전화</string>
    <string name="btn_message_text">문자</string>
    <string name="container_title">%1$s, %2$s</string>
    <string name="text_card_delete">제거</string>
    <string name="card_title_hint">홍길동</string>
    <string name="card_contact_number_hint">010–1234–5678</string>
    <string name="card_shadow_text">CARD</string>
    <string name="card_remove_btn_text">X</string>
    <string name="empty_container_layer_title">add next : </string>
    <string name="next_arrow_desc">next arrow for indicate next item is exist.</string>
    <string name="prev_arrow_desc">previous arrow for indicate previous item is exist.</string>
    <string name="detail_main_image_view_desc">card image. click to spread image.</string>
    <string name="util_container_fab_desc">floating button. click to spread util buttons.</string>
    <string name="take_picture_fab_desc">floating button. click to spread util buttons.</string>
    <string name="open_gallery_fab_desc">floating button. click to spread util buttons.</string>
    <string name="load_contact_info_fab_desc">floating button. click to spread util buttons.</string>
    <string name="send_card_image_btn_desc">paper plain shape button. click to find target card. </string>
    <string name="detail_titleTv_text">-이름</string>
    <string name="detail_subtitleTv_text">-서브타이틀</string>
    <string name="detail_contactNumberTv_text">-연락처</string>
    <string name="detail_memoTv_text">-메모</string>
    <string name="detail_titleEt_text">이름</string>
    <string name="detail_subtitleEt_text">서브타이틀</string>
    <string name="detail_contactNumberEt_text">연락처</string>
    <string name="detail_memoEt_text">메모</string>
    <string name="detail_modify_btn_text">수정</string>
    <string name="detail_back_btn_text">되돌아가기</string>
    <string name="detail_save_btn_text">저장</string>
    <string name="detail_cancel_btn_text">취소</string>
    <string name="prev_page_btn_desc">page button. click to move previous page.</string>
    <string name="next_page_btn_desc">page button. click to move previous page.</string>
    <string name="call_btn_desc">call button. click to move calling screen.</string>
    <string name="message_btn_desc">message button. click to move messaging screen.</string>
    <string name="flower_icon_desc">flower image view. this view appeared when target item chosen.</string>
    <string name="search_item_selecting_btn_desc">dot button. click to fire finding card.</string>
</resources>