<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="cardRootReference"
            type="com.choco_tyranno.mycardtree.databinding.ItemCardFrameBindingImpl" />

        <variable
            name="card"
            type="com.choco_tyranno.mycardtree.card_crud_feature.domain.card_data.CardDTO" />

        <variable
            name="cardState"
            type="com.choco_tyranno.mycardtree.card_crud_feature.domain.card_data.CardState" />

        <variable
            name="frontState"
            type="com.choco_tyranno.mycardtree.card_crud_feature.domain.card_data.CardState.Front" />

        <variable
            name="viewModel"
            type="com.choco_tyranno.mycardtree.card_crud_feature.presentation.CardTreeViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/frontCard_cardView"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp"
        app:onDragListener="@{viewModel.onDragListenerForCard}">

        <!-- edit mode start-->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/frontCard_titleEditText"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            android:hint="@string/card_title_hint"
            android:text="@{card.title}"
            android:inputType="text"
            android:layout_width="210dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:paddingStart="@dimen/cardFront_titleEditText_paddingStart"
            android:paddingEnd="@dimen/cardFront_titleEditText_paddingEnd"
            android:background="@android:color/transparent"
            android:fontFamily="@font/overlock_regular"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/frontCard_contactNumberEditText"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            android:hint="@string/card_contact_number_hint"
            android:text="@{card.contactNumber}"
            android:inputType="phone"
            android:onTextChanged="@{()->cardState.front.onContactNumberEditTextChanged(cardRootReference)}"
            android:layout_width="210dp"
            android:layout_height="27dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="49dp"
            android:paddingStart="@dimen/cardFront_contactNumberEditText_paddingStart"
            android:paddingEnd="@dimen/cardFront_contactNumberEditText_paddingEnd"
            android:background="@android:color/transparent"
            android:fontFamily="@font/overlock_regular"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frontCard_editTool_saveBtn"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            android:onClick="@{(saveButton)->frontState.onSaveButtonClicked(cardRootReference, card, viewModel)}"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btn_save_name"
            android:textColor="@color/colorAccent"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frontCard_editTool_cancelBtn"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            android:onClick="@{(cancelButton)->frontState.onCancelButtonClicked(cardRootReference, card)}"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btn_cancel_name"
            android:textColor="@color/colorAccent"
            app:cornerRadius="20dp" />


        <!-- read mode start-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/frontCard_titleTextView"
            android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
            android:text="@{card.title}"
            android:layout_width="210dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingStart="@dimen/cardFront_titleTextView_paddingStart"
            android:paddingEnd="@dimen/cardFront_titleTextView_paddingEnd"
            android:fontFamily="@font/overlock_regular"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            tools:text="이대곤"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/frontCard_contactNumberTextView"
            android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
            android:text="@{card.contactNumber}"
            android:layout_width="210dp"
            android:layout_height="27dp"
            android:layout_gravity="bottom"
            android:paddingStart="@dimen/cardFront_contactNumberTextView_paddingStart"
            android:paddingEnd="@dimen/cardFront_contactNumberTextView_paddingEnd"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/overlock_regular"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            tools:text="010-3355-5252"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/frontCard_switch"
            android:onCheckedChanged="@{(view, isOn)->cardState.front.onSwitchChanged(card, isOn)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="12dp" />

    </com.google.android.material.card.MaterialCardView>
</layout>