<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".card_crud_feature.presentation.detail_page.DetailCardActivity">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.choco_tyranno.team_tree.presentation.detail_page.DetailPageViewModel" />

        <variable
            name="card"
            type="com.choco_tyranno.team_tree.domain.card_data.CardDto" />
        <variable
            name="detailPage"
            type="com.choco_tyranno.team_tree.presentation.detail_page.DetailPage" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:tag="container">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <!-- Media -->
                        <ImageView
                            android:id="@+id/detail_main_image_view"
                            app:onClickListener="@{viewModel.onClickListenerForSpreadingImage}"
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="@string/detail_main_image_view_desc"
                            android:scaleType="centerCrop"
                            android:transitionName="shared_element_img"
                            app:cardImage="@{detailPage.cardImage}"
                            app:defaultCardImage="@{viewModel.defaultCardImage}"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/tv_frame"
                                android:visibility="@{detailPage.pageMode==detailPage.READ_MODE? View.VISIBLE : View.INVISIBLE}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/detail_title_tv"
                                    android:text="@{card.title}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginTop="20dp"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceHeadline6"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/detail_subtitle_tv"
                                    android:text="@{card.subtitle}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_title_tv"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

                                <TextView
                                    android:id="@+id/detail_contact_number_tv"
                                    android:text="@{card.contactNumber}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_subtitle_tv"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_subtitle_tv" />

                                <TextView
                                    android:id="@+id/detail_free_note_tv"
                                    android:text="@{card.freeNote}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorPrimary"
                                    android:textSize="20sp"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_contact_number_tv"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_contact_number_tv" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/detail_modify_btn"
                                    onClickListener="@{viewModel.onClickListenerForModeSwitchBtn}"
                                    style="?attr/borderlessButtonStyle"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:layout_marginEnd="8dp"
                                    android:text="@string/detail_modify_btn_text"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_free_note_tv" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/detail_back_btn"
                                    onClickListener="@{viewModel.onClickListenerForBackBtn}"
                                    style="?attr/borderlessButtonStyle"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/detail_back_btn_text"
                                    app:layout_constraintBottom_toBottomOf="@+id/detail_modify_btn"
                                    app:layout_constraintRight_toRightOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/et_frame"
                                android:visibility="@{detailPage.pageMode==detailPage.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/detail_title_et"
                                    android:text="@{card.title}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginTop="10dp"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceHeadline6"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/detail_subtitle_et"
                                    android:text="@{card.subtitle}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_title_et"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_title_et" />

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/detail_contact_number_et"
                                    android:text="@{card.contactNumber}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="phone"
                                    android:singleLine="true"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_subtitle_et"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_subtitle_et" />

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/detail_free_note_et"
                                    android:text="@{card.freeNote}"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorPrimary"
                                    android:textSize="20sp"
                                    app:layout_constraintLeft_toLeftOf="@+id/detail_contact_number_et"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_contact_number_et" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/detail_save_btn"
                                    onClickListener="@{viewModel.onClickListenerForSaveBtn}"
                                    style="?attr/borderlessButtonStyle"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:text="@string/detail_save_btn_text"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/detail_free_note_et" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/detail_cancel_btn"
                                    onClickListener="@{viewModel.onClickListenerForModeSwitchBtn}"
                                    style="?attr/borderlessButtonStyle"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/detail_cancel_btn_text"
                                    app:layout_constraintBottom_toBottomOf="@+id/detail_save_btn"
                                    app:layout_constraintRight_toRightOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </FrameLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </FrameLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/detail_main_image_view"
            app:layout_anchorGravity="bottom|right|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/util_container_fab"
                onClickListener="@{viewModel.onClickListenerForUtilContainerFab}"
                android:contentDescription="@string/util_container_fab_desc"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#98A8C9"
                android:clickable="true"
                android:src="@drawable/baseline_add_white_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#fff" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/take_picture_fab"
                onClickListener="@{viewModel.onClickListenerForTakePictureFab}"
                android:visibility="@{detailPage.utilContainerOpened? View.VISIBLE: View.INVISIBLE}"
                android:contentDescription="@string/take_picture_fab_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#98A8C9"
                android:clickable="true"
                android:src="@drawable/baseline_camera_white_48"
                app:layout_constraintRight_toLeftOf="@+id/util_container_fab"
                app:layout_constraintTop_toTopOf="@+id/util_container_fab"
                app:rippleColor="#fff" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/open_gallery_fab"
                android:contentDescription="@string/open_gallery_fab_desc"
                onClickListener="@{viewModel.onClickListenerForOpenGalleryFab}"
                android:visibility="@{detailPage.utilContainerOpened? View.VISIBLE: View.INVISIBLE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#98A8C9"
                android:clickable="true"
                android:src="@drawable/baseline_collections_white_24"
                app:layout_constraintRight_toRightOf="@+id/util_container_fab"
                app:layout_constraintTop_toBottomOf="@+id/util_container_fab"
                app:rippleColor="#fff" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/load_contact_info_fab"
                android:contentDescription="@string/load_contact_info_fab_desc"
                onClickListener="@{viewModel.onClickListenerForLoadContactInfoFab}"
                android:visibility="@{detailPage.utilContainerOpened? View.VISIBLE: View.INVISIBLE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#98A8C9"
                android:clickable="true"
                android:src="@drawable/baseline_contact_phone_white_48"
                app:layout_constraintRight_toRightOf="@+id/take_picture_fab"
                app:layout_constraintTop_toBottomOf="@+id/take_picture_fab"
                app:rippleColor="#fff" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>